// Repeated server-defs, due to some symbol visibility issues.

syntax = "proto3";
package cli;

message LocalFileDescription {
    string local_id = 1;
    string file_path = 2;
    string hash_sha1 = 3;
}

message ListLocalFilesRequest {

}

message ListLocalFilesResponse {
    repeated LocalFileDescription file_descs = 1;
}

message FileAddRequest {
    string file_path = 1;
    optional string group_id = 2;
}

message FileAddResponse {

}

message FileRemoveRequest {
    string file_path = 1;
    optional string group_id = 2;
}

message FileRemoveResponse {

}

message FileListRequest {
    optional string remote_id = 1;
    optional string group_id = 2;
}

message FileListResponse {
    repeated LocalFileDescription file_list = 1;
}
